# fracing_cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
docs/: GA_PATCH_NOTES.txt  INTEGRATION_NOTES_NEURAL.txt  roadmap.md
docs/aidocs/: changes 26-02-12.md  quick improvements 2026-02-12-9-54.md
include/: Application.h  BehavioralCloningController.h  Car.h  CarGame.h  Controller.h  DebugRenderer.h  GATrainingMonitor.h  GeneticController.h  GenomeController.h  ObservationDatasetLogger.h  RandomController.h  Telemetry.h  Track.h  Trackeditor.h  VehicleControls.h  VehicleModel.h  VehicleParams.h  VehicleState.h  WorldRenderer.h
scripts/: dataset_bc.csv  ga_best_genome.json  train_behavioral_cloning.py
src/: Application.cpp  BehavioralCloningController.cpp  Car.cpp  CarGame.cpp  DebugRenderer.cpp  GATrainingMonitor.cpp  GeneticController.cpp  GenomeController.cpp  ObservationDatasetLogger.cpp  RandomController.cpp  Telemetry.cpp  Track.cpp  Trackeditor.cpp  VehicleModel.cpp  main.cpp
tracks/: NedoMonza v1.1.json  NedoMonza v1.2.json  NedoMonza v1.3 - boundarless.json  NedoMonza v1.json  Oval-RLV1.json  default_track.json  ehehate_test_wwallss.json  example_oval_track.json  lolpeppe.json  ovalol.json  test_surfaces.json
